# Puny-BuildTools

./: .gitignore  .pi6rc  .punyorb  .punyrc  .punywsl  2cdt  CHANGELOG.md  LICENSE  LICENSE.md  README.md  acme  addtossd  atr  beebasm  c1541  cc1541  cpcscr.sh  degaspi1.sh  dgdebug  dialogc  dsktool  ifftool.sh  inform  interlz3  interlz5  kenobi  lzsa  make_abbrvs.sh  pi6  puny  s-pic  sc2daad  tap2tzx  teststory.sh  tidisk  trsdos_ar2  trsdos_cecb  trsdos_mamou  trsdos_tocgen  tzx2tap  (+3 more)
FictionTools/: abbreviations.py  d64merge  easyfree  exobasic  exomizer  i6_abbrvs  idsk  inform6  listtibasic  os9  png2crtc  puny  raw2mfm  trsdos_decb  trsdos_makewav  unquill  zorkmid
FictionTools/z88dk/: .travis.yml  LICENSE  set_environment.sh  z88dk.Dockerfile
Templates/: a8bit.sh  amiga.sh  apple2.sh  atari_st.sh  bbc_acorn.sh  c128.sh  c128_d64.sh  c64.sh  cpc_pcw.sh  decrainbow.sh  dos.sh  kaypro.sh  macintosh.sh  mega65.sh  msx.sh  oric.sh  osborne1.sh  plus4.sh  sam_coupe.sh  speccy.sh  ti99.sh  trs80_m3.sh  trs80_m4.sh  trs_coco_dragon64.sh  vic20_pet.sh
Templates/Interpreters/: ATARIST.PRG  ATARIST_Z3.PRG  CPM_Plus_speccy.dsk  ClassicMac_MaxZip.dsk  DISC.BAS  DISC.OLD  DOSINFO.COM  GAME.BAS  MSXNOPIC.DSK  MSXTERP.DSK  ProDOS_SAM.dsk  SAM_Coupe.cpm  SAM_Vezza.cpm  SAM_image.cpm  Spec_Infocom.dsk  Spec_Vezza.dsk  Spec_Vezza_SCR.dsk  Spec_ZXZVM.dsk  TRS80_M3.dsk  TRS80_M4.dsk  amiga_Frotz.adf  amiga_Frotz_pic.adf  amiga_Infocom_z5.adf  amiga_Infocom_z5_pic.adf  amiga_ZIP_pic.adf  apple2_boot.dsk  apple2_template.dsk  autoboot.c65.16  autoboot.c65.256  config.seq  cpc_pcw.dsk  cpc_vezza.dsk  dragon64_loader.vdk  dragon_bytefill  fontl.fnt  fontm.fnt  fonts.fnt  pinforic.dsk  ti994a.dsk  z3-c64  (+1 more)
Templates/Resources/: README  all.sh  bundle.sh  config.sh  pixel_guide.txt
atari8bit/: a8.old
hfsutils/: hfsutil
scrload/: Makefile_scrload  makescr.sh  scrload.c
z88dk/: Makefile  README.md  build.sh  changelog.txt  vsbuild.cmd
z88dk/doc/: ZXSpectrumZSDCCnewlib_01_GettingStarted.md  ZXSpectrumZSDCCnewlib_03_SimpleGraphics.md  ZXSpectrumZSDCCnewlib_05_MultipleFiles.md  ZXSpectrumZSDCCnewlib_SP1_01_GettingStarted.md  ZXSpectrumZSDCCnewlib_SP1_03_AnimatedSprite.md  ZXSpectrumZSDCCnewlib_SP1_04_BiggerSprites.md  farz88.html  interrupts.txt  memoryallocation.txt  overview.md  ti.txt  z80asm.html  z80asm.txt
z88dk/examples/: collider.c  dstar.c  microman.c  othello.c
z88dk/ext/regex/: CMakeLists.txt  debug.c  regcomp.d  regerror.d  regexec.d  regfree.c  regfree.d
z88dk/include/: ace.h  application.h  arch.h  assert.h  bdscio.h  byteswap.h  conio.h  cpc.h  cpm.h  debug.h  dirent.h  dor.h  dos.h  fcntl.h  float.h  games.h  gfxprofile.h  gray.h  gui.h  input.h  interrupt.h  intrinsic.h  malloc.h  math.h  microc.h  msx.h  nc.h  newbrain.h  osca.h  psg.h  rs232.h  sdcard.h  sms.h  sos.h  spectrum.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  (+12 more)
z88dk/lib/: ioctl.def  sdcard.def  vgl_crt0.asm  vgl_crt0.opt  yaz180_rules.1  z80_crt0.hdr  z80n_rules.2  z80n_rules.old.2  z80rules.0  z80rules.1  z80rules.2  z80rules.8  z80rules.9  z80rules.frame  zxr_crt0.asm
z88dk/libsrc/: Make.config  abc800.lst  ace.lst  alphatro.lst  aquarius.lst  c128ansi.lst  coleco.lst  cpc.lst  embedded.lst  enterprise.lst  excali64_clib.lst  fp1100.lst  g800.lst  g850.lst  g850b.lst  gal.lst  gb.lst  gfxbase.lst  gfxbasetxt6.lst  gfxbasew.lst  gfxbasew_8080.lst  hemc.lst  hgmc.lst  kc.lst  m5.lst  mc1000.lst  msx.lst  mtx.lst  multi8.lst  myvision.lst  nascom.lst  nc100.lst  osca.lst  pacman.lst  pc6001.lst  pencil2.lst  pps.lst  pv2000.lst  rcmx000.lst  rex6000.lst  (+17 more)
z88dk/src/: .editorconfig  portability.h
z88dk/support/: Makefile  README
z88dk/test/: Makefile
z88dk/testsuite/: 01_cast_global_pointer.c  01_cast_global_pointer.opt  02_addr_ptr.c  Far_Pointer_Call.c  (+110 more)
(+14654 files in other folders)
